Updated server side to support new API calls...
